CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(smtpping)
SET(TARGET_NAME "smtpping")

ADD_EXECUTABLE(${TARGET_NAME}
	smtpping.cpp
	resolver.cpp
)

IF("${CMAKE_SYSTEM}" MATCHES "Darwin")
	ADD_DEFINITIONS(-DBIND_8_COMPAT)
ENDIF()

TARGET_LINK_LIBRARIES(${TARGET_NAME}
	resolv
	pthread
)

SET(CMAKE_INSTALL_PREFIX "/usr/local/")
INSTALL(TARGETS ${TARGET_NAME} DESTINATION bin)
